Update Japanese locale

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -690,21 +690,20 @@ ja:
   instructions:
     signup_head: '1 サインアップ'
     signup_body: |
-      デプロイ直後でユーザーが存在しないため、まずは SkyHopper にサインアップします。
+      デプロイ直後はユーザーが存在しないため、まずは SkyHopper にサインアップします。
       デプロイした SkyHopper にアクセスし、Sign up へと進み、ユーザー名とメールアドレスを入力、Admin と Master にチェックを入れてユーザーを作成してください。
-    client_head: 'クライアントを作成します。'
+    client_head: '顧客を作成'
     client_body: |
-      新しい cient のボタンをクリックして、名とクライアントの一意の文字列にする必要がありますコードを入力してください。
-    project_head: 'プロジェクトを作成します。'
+      [新規顧客] ボタンをクリックし、名前とコードを入力して、顧客を作成してください。コードは一意の文字列である必要があります。
+    project_head: '案件を作成'
     project_body: |
-      プロジェクトを作成すると、クライアントを選択し、[新しいプロジェクト] ボタンとコード、名前、クラウド プロバイダーとフォームに記入
-      アクセスキーと秘密アクセスキー AWS から作成されました。
-    infrastructure_head: 'インフラストラクチャを作成します。'
+      顧客作成後、顧客を選択し、[新規案件] ボタンをクリックしてコード、名前、クラウド提供会社、AWS のアクセスキーを入力し、案件を作成してください。
+    infrastructure_head: 'インフラストラクチャを作成'
     infrastructure_body: |
-      作成し、クライアントでプロジェクトを選択した後ステップ、プロジェクト内を管理するためのインフラストラクチャを作成します。キーのペアを必要とします。
-      stackname、および地域。あなたはまだ鍵がない、生成するキーペア関数を使用して新しいキーのペアを作成できます。
-    cf_template_head: 'CloudFormation テンプレートを適用します。'
+      プロジェクト内部で管理されるインフラストラクチャを作成します。
+      案件作成後、案件を選択し、[新規インフラ] ボタンをクリックして、スタック名、リージョン、鍵ペア名と秘密鍵を入力してください。もし鍵ペアを持っていないなら、鍵ペア生成機能を使用して新しい鍵ペアを生成できます。
+    cf_template_head: 'CloudFormation テンプレートを適用'
     cf_template_body: |
-      雲形成テンプレートを適用するために詳細を表示して <b>[操作] メニュー</b> をクリックし、<b>cloudformation タブ</b> を適用 <b>するインフラストラクチャを選択</b> する必要。
-      その後、雲生成テンプレートの一覧が画面に表示されます。Fillout しパラメーターを設定する必要な fileds を押して終わりあなたの新しいスタックを作成を開始するには、テンプレートを選択してください。
-      AWS を既に作成した場合も、EC2 を追加できます。詳細についてを参照してください。 <a href="http://skyhopper.org" target="_blank"> skyhopper.org </a>.
+      CloudFormation テンプレートを適用するには、<b>インフラを選択</b>して詳細を表示し <b>[Operations] メニュー</b> から <b>CloudFormation テンプレートの適用</b> を選択してください。
+      その後、CloudFormation テンプレートの一覧が画面に表示されます。お好みのテンプレートを選択後、[パラメータの入力]をクリックしてフォームを埋めた後、[送信] ボタンを押すと、新規スタックの作成が開始されます。
+      既に AWS に EC2 を作成しているならば、それを追加することもできます。詳細については<a href="http://skyhopper.org" target="_blank"> skyhopper.org </a>を参照してください。
