--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -111,7 +111,7 @@ en:
         If you have no AWS Securty credentials yet, please follow this link:
         <a href="http://docs.aws.amazon.com/general/latest/gr/managing-aws-access-keys.html" target="_blank"> Managing Access Keys for your AWS Account </a>.
       aws_region: |
-        After setting the security credentails please select the aws region for SkyHopper instances to be deployed.
+        After setting the security credentials please select the aws region for SkyHopper instances to be deployed.
         The purpose for this is to reduce data latency in the application.
       aws_keypair: |
         To allow SkyHopper to access your instance, you must create a key pair, specify the name of the key pair when you launch the instance.
