Update Japanese locale

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -96,7 +96,7 @@ ja:
       aws:    'AWS の設定'
       new_keypair: '新しい鍵ペアを作成'
       exist_keypair: '既存の鍵ペアを使用します'
-      drop_file:     'ファイルをここにドロップするか、選択する]をクリックします'
+      drop_file:     'ファイルをここにドロップするか、クリックして選択します'
       pem_file:      'AWSから作成された.pemファイルでなければなりません'
     btn:
       create_chefserver: 'Chef Server の構築'
@@ -104,17 +104,17 @@ ja:
       create_download:   '作成＆ダウンロード'
     intro:
       aws_keys:   |
-        AWSのアクセスと秘密鍵は、シェフ＆のZabbixサーバを構築するために、あなたのインフラストラクチャを管理するためにSkyHopperを有効にする必要があります。
-        あなたはまだAWS Securtyの資格を持っていない場合は、このリンクに従ってください。
-        <a href="http://docs.aws.amazon.com/general/latest/gr/managing-aws-access-keys.html" target="_blank"> あなたのAWSアカウントのアクセスキーを管理します </a>.
+        SkyHopper がインフラを管理できるようにするために、また Chef & Zabbix Server を構築するためには AWS のアクセスキーが必要です。
+        まだ AWS セキュリティの認証情報を持っていない場合は、このリンクを参照してください。
+        <a href="http://docs.aws.amazon.com/ja_jp/general/latest/gr/managing-aws-access-keys.html" target="_blank"> AWS アカウントのアクセスキー管理 </a>.
       aws_region: |
-        SkyHopperインスタンスをデプロイするためのセキュリティcredentailsを設定した後、AWSリージョンを選択してください。
-        このための目的は、アプリケーション内のデータ遅延を低減することです。
+        認証情報の入力後、Chef & Zabbix Server インスタンスをデプロイするリージョンを選択してください。
+        これは、アプリケーション内のデータ遅延を低減するためです。
       aws_keypair: |
-        SkyHopperがあなたのインスタンスへのアクセスを許可するには、鍵のペアを作成するには、インスタンスを起動したときに鍵ペアの名前を指定する必要があります。
-        この場合、あなたはすでに鍵ペアを持っている場合は、 「使用既存のキーペア」を選択し、選択またはドロップボックスにファイルをドラッグすることができます。
-        しかし、あなたはまた、あなたが入力した入力したAWSのセキュリティ資格情報を使用して、新しい鍵ペアを作成することができますし、選択してオプション「新しいキーペア作成」を。
-      chef_button: '上記の処理の後、あなたは今インストールを開始するためにシェフのサーバーの作成]ボタンを押すことができます。'
+        SkyHopper にあなたのインスタンスへのアクセスを許可するために、鍵ペアを作成し、インスタンスを立ち上げる時に鍵ペアの名前を指定する必要があります。
+        もし、あなたがすでに鍵ペアを持っている場合、 「既存のキーペアを使用」を選択し、ファイルを選択またはドラッグ&ドロップすることができます。
+        また、あなたが入力した AWS の認証情報を使用して、[新しい鍵ペアを作成] から新しい鍵ペアを作成することができます。
+      chef_button: '上記の手順の後、[Chef Server の構築] ボタンを押してインストールを開始することができます。'
 
   clients:
     client: '顧客'
