--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -559,6 +559,7 @@ ja:
       created:        'Zabbix サーバが正常に作成されました。'
       updated:        'Zabbix サーバが正常に更新されました'
       deleted:        'Zabbix サーバ"%{name}" が正常に削除されました'
+      delete_server:  'あなたはこのZABBIXサーバを削除してもよろしいですか？'
 
   ec2_instances:
     description:       '詳細'
