Fixed bottom padding on wrapper and how to button

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -49,6 +49,7 @@ en:
       export:          'Export'
       all:             'All'
       multiple_select: 'Multiple Select'
+      help:            'How-To'
     msg:
       loading:       ' Loading...'
       creating:      ' Creating...'
