--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -49,6 +49,7 @@ ja:
       export:          'エクスポート'
       all:             '全部'
       multiple_select: '複数選択'
+      help:            '利用方法'
     msg:
       loading:       ' 読み込み中...'
       creating:      ' 作成中...'
