--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -92,11 +92,6 @@ en:
       aws_keypair:       'SSH key used for SkyHopper System (Registered KeyPair from EC2 console that is linked with API key above)'
       zabbix_updated:    'Zabbix Setting was successfully updated.'
       eip_limit_error:   'Cannot allocate EIP. Please check the limit of EIP.'
-      db_export:         'When exporting SkyHopper Database into a zip file, it includes these files: '
-      db_import:         'When importing SkyHopper Database, select a zip file which includes these files: '
-      env:  'SkyHopper%{env}.sql'
-      secret: 'secret_key_base'
-      db_key:  'db_crypt_key'
     title:
       show:   'Welcome to SkyHopper!'
       setup:  'Setup'
@@ -709,3 +704,16 @@ en:
     incrementHour: 'Increment Hour'
     decrementHour: 'Decrement Hour'
     pickHour: 'Pick Hour'
+
+  databases:
+    db_management: 'Database Management'
+    msg:
+      env:       'SkyHopper%{env}.sql'
+      secret:    'secret_key_base'
+      db_key:    'db_crypt_key'
+      db_export: 'When exporting SkyHopper Database into a zip file, it includes these files: '
+      db_import: 'When importing SkyHopper Database, select a zip file which includes these files: '
+      db_import_finish: 'Database import has finished.'
+      db_import_warning: |
+        Database of SkyHopper will be replaced completely by the import operation.
+        Please be careful when using this.
