--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -92,11 +92,6 @@ ja:
       aws_keypair:       'SkyHopper のシステムが使用する SSH鍵（上記の APIキー に紐付けられた EC2 のコンソールから登録した鍵ペアを指定）'
       zabbix_updated:    'Zabbix の設定は正常に更新されました。'
       eip_limit_error:   'EIP を確保することが出来ません。EIP の個数制限を確認して下さい。'
-      db_export:         'エクスポートしたZIPファイルには下記のファイルが含まれています。'
-      db_import:         'DB をインポートするには下記のファイルを含む ZIP ファイルを指定してください'
-      env:  'SkyHopper%{env}.sql'
-      secret: 'secret_key_base'
-      db_key:  'db_crypt_key'
     title:
       show:   'SkyHopper へようこそ'
       setup:  'SkyHopper のセットアップ'
@@ -707,3 +702,16 @@ ja:
     incrementHour: '1時間後'
     decrementHour: '1時間前'
     pickHour: '時間を選択してください'
+
+  databases:
+    db_management: 'データベースの管理'
+    msg:
+      env:       'SkyHopper%{env}.sql'
+      secret:    'secret_key_base'
+      db_key:    'db_crypt_key'
+      db_export: 'エクスポートしたZIPファイルには下記のファイルが含まれています。'
+      db_import: 'DB をインポートするには下記のファイルを含む ZIP ファイルを指定してください'
+      db_import_finish: 'データベースのインポートが完了しました'
+      db_import_warning: |
+        この操作によって SkyHopper のデータベースは完全に置き換えられます。
+        データがバックアップされていることを確認した上で、細心の注意を払って使用してください。
