--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -717,3 +717,6 @@ ja:
       db_import_warning: |
         この操作によって SkyHopper のデータベースは完全に置き換えられます。
         データがバックアップされていることを確認した上で、細心の注意を払って使用してください。
+      under_maintenance: |
+        データベースのインポート処理中のため、一時的に利用できなくなっています。
+        少し待ってから再度お試しください。
