Zabbix server edit RESTful implementation and value verification Backend calls for zabbix server edit functionality frontend implementation and redirection

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -555,6 +555,7 @@ en:
     details:     'Details'
     btn:
       add:            'Add Zabbix Server'
+      background:     'Run in Background'
     msg:
       creating_infra: 'Creating Infrastructure...'
       creating_stack: 'Creating Stack...'
