--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -713,13 +713,13 @@ en:
       env:       'SkyHopper%{env}.sql'
       secret:    'secret_key_base'
       db_key:    'db_crypt_key'
-      db_export: 'When exporting SkyHopper Database into a zip file, it includes these files: '
-      db_import: 'When importing SkyHopper Database, select a zip file which includes these files: '
+      db_export: 'When exporting SkyHopper Database into a zip file, the following files are included: '
+      db_import: 'When importing SkyHopper Database, select a zip file that contains these files: '
       db_import_finish: 'Database import has finished.'
       db_import_intro:  'You can not perform any operations until the import is complete.'
       db_import_warning: |
         Database of SkyHopper will be replaced completely by the import operation.
         Please be careful when using this.
       under_maintenance: |
-        Temporarily unavailable because database importing is in progress.
-        Please wait for a while and try again.
+        Temporarily unavailable due to database import process.
+        Please wait for at least a minute and try to refresh the browser again.
