--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -546,13 +546,13 @@ en:
       stop:           'Starting Chef Server...'
       not_running:    'Chef Server is not running.'
       chef_instruction:   'The Knife file can be installed in your environment by deploying the downloaded file in `~/.chef/` path. When executing the knife command, this file is neccessary to access the Chef Server.'
-      set_config:     'Setup knife configuration'
-      set_config_instruction: |
+      set_knife:      'Setup knife configuration'
+      set_knife_instruction: |
         Setup the knife configuration so that SkyHopper can use the knife command.
-      set_config_done: 'Setting up the knife configuration has done.'
+      set_knife_done: 'Setting up the knife configuration has done.'
     btn:
       download_keys:  'Download keys'
-      set_config:     'Setup'
+      set_knife:      'Setup'
 
   zabbix_servers:
     zabbix:      'Zabbix Servers'
