Modified migration files that adds references to each foreign keys and changed routes and servertest controller methods  model and views

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -343,10 +343,10 @@ en:
     run:               'Run Serverspecs'
     results:           'Serverspec Results'
     btn:
-      add:       'Add Serverspec'
+      add:       'Add Servertest'
       create:    'Create Serverspec'
       run:       'Run Serverspecs'
-      generator: 'Generator'
+      generator: 'Serverspec Generator'
     msg:
       created:   'Serverspec was successfully created.'
       updated:   'Serverspec was successfully updated.'
