--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -341,10 +341,10 @@ ja:
     run:               'Serverspec の実行'
     results:           'Serverspec の結果'
     btn:
-      add:       'Serverspec の追加'
+      add:       'Servertest の追加'
       create:    'Serverspec の作成'
       run:       'Serverspec の実行'
-      generator: 'ジェネレータ'
+      generator: 'Serverspec ジェネレータ'
     msg:
       created:   'Serverspec が正常に追加されました'
       updated:   'Serverspec が正常に更新されました'
